force-app/main/default/objects/Order_Details__c/Order_Details__c.object-meta.xml
<CustomObject>
    <label>Order Detail</label>
    <nameField>
        <label>Object Api Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>