force-app/main/default/objects/Order_Details__c/fields/commission__c.field-meta.xml
<CustomField>
    <fullName>commission__c</fullName>
    <label>commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>