force-app/main/default/objects/Order_Details__c/fields/detailContent__c.field-meta.xml
<CustomField>
    <fullName>detailContent__c</fullName>
    <label>detailContent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>