force-app/main/default/objects/Order_Details__c/fields/fundraiserFee__c.field-meta.xml
<CustomField>
    <fullName>fundraiserFee__c</fullName>
    <label>fundraiserFee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>