force-app/main/default/objects/Order_Details__c/fields/idDelegate__c.field-meta.xml
<CustomField>
    <fullName>idDelegate__c</fullName>
    <externalId>true</externalId>
    <label>idDelegate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>