force-app/main/default/objects/Order_Details__c/fields/idDetail__c.field-meta.xml
<CustomField>
    <fullName>idDetail__c</fullName>
    <externalId>true</externalId>
    <label>idDetail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>