force-app/main/default/objects/Order_Details__c/fields/idOrder__c.field-meta.xml
<CustomField>
    <fullName>idOrder__c</fullName>
    <externalId>true</externalId>
    <label>idOrder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>