force-app/main/default/objects/Order_Details__c/fields/idPurchaser__c.field-meta.xml
<CustomField>
    <fullName>idPurchaser__c</fullName>
    <externalId>true</externalId>
    <label>idPurchaser</label>
    <length>250</length>
    <type>Text</type>
</CustomField>