force-app/main/default/objects/Order_Details__c/fields/idRefersTo__c.field-meta.xml
<CustomField>
    <fullName>idRefersTo__c</fullName>
    <externalId>true</externalId>
    <label>idRefersTo</label>
    <length>250</length>
    <type>Text</type>
</CustomField>