force-app/main/default/objects/Order_Details__c/fields/idSchool__c.field-meta.xml
<CustomField>
    <fullName>idSchool__c</fullName>
    <label>idSchool</label>
    <length>250</length>
    <type>Text</type>
</CustomField>