force-app/main/default/objects/Order_Details__c/fields/IdShipping__c.field-meta.xml
<CustomField>
    <fullName>IdShipping__c</fullName>
    <externalId>true</externalId>
    <label>IdShipping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>