force-app/main/default/objects/Order_Details__c/fields/idTracking__c.field-meta.xml
<CustomField>
    <fullName>idTracking__c</fullName>
    <externalId>true</externalId>
    <label>idTracking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>