force-app/main/default/objects/Order_Details__c/fields/itemDiscount__c.field-meta.xml
<CustomField>
    <fullName>itemDiscount__c</fullName>
    <label>itemDiscount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>