force-app/main/default/objects/Order_Details__c/fields/orderComplete__c.field-meta.xml
<CustomField>
    <fullName>orderComplete__c</fullName>
    <label>orderComplete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>