force-app/main/default/objects/Order_Details__c/fields/orderStatus__c.field-meta.xml
<CustomField>
    <fullName>orderStatus__c</fullName>
    <label>orderStatus</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>