force-app/main/default/objects/Order_Details__c/fields/orderTime__c.field-meta.xml
<CustomField>
    <fullName>orderTime__c</fullName>
    <label>orderTime</label>
    <type>DateTime</type>
</CustomField>