force-app/main/default/objects/Order_Details__c/fields/original_Tax__c.field-meta.xml
<CustomField>
    <fullName>original_Tax__c</fullName>
    <label>original Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>