force-app/main/default/objects/Order_Details__c/fields/postedTax__c.field-meta.xml
<CustomField>
    <fullName>postedTax__c</fullName>
    <label>postedTax</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>