force-app/main/default/objects/Order_Details__c/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <label>price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>