force-app/main/default/objects/Order_Details__c/fields/productionTime__c.field-meta.xml
<CustomField>
    <fullName>productionTime__c</fullName>
    <label>productionTime</label>
    <type>DateTime</type>
</CustomField>