force-app/main/default/objects/Order_Details__c/fields/quantity__c.field-meta.xml
<CustomField>
    <fullName>quantity__c</fullName>
    <label>quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>