force-app/main/default/objects/Order_Details__c/fields/shipTime__c.field-meta.xml
<CustomField>
    <fullName>shipTime__c</fullName>
    <label>shipTime</label>
    <type>DateTime</type>
</CustomField>