force-app/main/default/objects/Order_Details__c/fields/shipTracking__c.field-meta.xml
<CustomField>
    <fullName>shipTracking__c</fullName>
    <label>shipTracking</label>
    <type>TextArea</type>
</CustomField>