force-app/main/default/objects/Order_Details__c/fields/sku__c.field-meta.xml
<CustomField>
    <fullName>sku__c</fullName>
    <label>sku</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>