force-app/main/default/objects/Order_Details__c/fields/skuData2__c.field-meta.xml
<CustomField>
    <fullName>skuData2__c</fullName>
    <label>skuData2</label>
    <type>TextArea</type>
</CustomField>