force-app/main/default/objects/Order_Details__c/fields/skuData__c.field-meta.xml
<CustomField>
    <fullName>skuData__c</fullName>
    <label>skuData</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>