force-app/main/default/objects/Order_Details__c/fields/subType__c.field-meta.xml
<CustomField>
    <fullName>subType__c</fullName>
    <label>subType</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>