force-app/main/default/objects/Order_Details__c/fields/taxExempt__c.field-meta.xml
<CustomField>
    <fullName>taxExempt__c</fullName>
    <label>taxExempt</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>