force-app/main/default/objects/Order_Details__c/fields/totalBlocks__c.field-meta.xml
<CustomField>
    <fullName>totalBlocks__c</fullName>
    <label>totalBooks</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>