force-app/main/default/objects/Order_Details__c/fields/totalFundraiser__c.field-meta.xml
<CustomField>
    <fullName>totalFundraiser__c</fullName>
    <label>totalFundraiser</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>