force-app/main/default/objects/Order_Details__c/fields/totalOptions__c.field-meta.xml
<CustomField>
    <fullName>totalOptions__c</fullName>
    <label>totalOptions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>